--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -66,6 +66,7 @@
    input.post_comment, input.post_suggestion{margin-bottom:2px !important;}
    .crosshair{cursor:crosshair !important;}
    #post_comment textarea{resize:vertical;}
+   .big{max-height:300% !important;max-width:300% !important;}
 </style>
 <div class="loading"></div>
 <div id="vis">
@@ -1067,7 +1068,7 @@ function submitSuggestion(){
         }else if(media.type.substr(0,5)=="video"){
             newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br><video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video><br>Submitted by "+name)
         }else if(media.type.substr(0,5)=="image"){
-            newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br><img src='"+media.data+"' style='max-width:280px !important;'/><br>Submitted by "+name)
+            newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br><img class='constrained' src='"+media.data+"' style='cursor:pointer;max-width:100%;max-height:100%;' onclick='enlarge(this)'/><br>Submitted by "+name)
         }else{
             newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br>Submitted by "+name)
         }
@@ -1081,6 +1082,9 @@ function submitSuggestion(){
         window.alert("Thank you for suggesting a project.\n\nYour project will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.")
     };
 };
+function enlarge(image){
+    $(image).toggleClass("big")
+}
 function submitComment(){
     var uploadSuccess = true;
     $.each(commentFiles, function(index, file) {
@@ -1106,7 +1110,7 @@ function submitComment(){
             }else if(media.type.substr(0,5)=="video"){
                 newComment.bindPopup(content + "<br><video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video><br>-" + name)
             }else if(media.type.substr(0,5)=="image"){
-                newComment.bindPopup(content + "<br><img src='"+media.data+"' style='max-width:280px !important;'/><br>-" + name)
+                newComment.bindPopup(content + "<br><img class='constrained' src='"+media.data+"' style='cursor:pointer;max-width:100%;max-height:100%;' onclick='enlarge(this)'/><br>-" + name)
             }else{
                 newComment.bindPopup(content + "<br>-" + name)
             }
