--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -1045,7 +1045,7 @@ function cancelSuggestion(){
 function submitSuggestion(){
     var uploadSuccess = true;
     $.each(suggestionFiles, function(index, file) {
-        if(file.size<10000000 && file.type=="image/png" || file.type=="image/gif" || file.type=="image/jpeg" || file.type=="video/avi" || file.type=="video/mpeg" || file.type=="video/mp4" || file.type=="video/quicktime" || file.type=="video/webm"){
+        if(file.size<10000000 && file.type.substr(0,5)=="image" || file.type.substr(0,5)=="video"){
             $("#post_suggestion input[type = 'file']").val("")
             $("#post_suggestion input[name = 'filename']").val(file.filename)
             $("#post_suggestion input[name = 'filedata']").val(file.data)
@@ -1066,7 +1066,20 @@ function submitSuggestion(){
         if(media.type==undefined){
             newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br>Submitted by "+name)
         }else if(media.type.substr(0,5)=="video"){
-            newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br><video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video><br>Submitted by "+name)
+            if(media.type=="video/x-msvideo"){
+                var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
+            }else if(media.type=="video/mpeg"){
+                var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
+            }else if(media.type=="video/mp4"){
+                var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
+            }else if(media.type=="video/quicktime"){
+                var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
+            }else if(media.type=="video/webm"){
+                var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
+            }else {
+                var video = "<a href='"+media.data+"'>Download video</a>";
+            };
+            newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br>"+video+"<br>Submitted by "+name)
         }else if(media.type.substr(0,5)=="image"){
             newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br><img class='constrained' src='"+media.data+"' style='cursor:pointer;max-width:100%;max-height:100%;' onclick='enlarge(this)'/><br>Submitted by "+name)
         }else{
@@ -1088,7 +1101,7 @@ function enlarge(image){
 function submitComment(){
     var uploadSuccess = true;
     $.each(commentFiles, function(index, file) {
-        if(file.size<10000000 && file.type=="image/png" || file.type=="image/gif" || file.type=="image/jpeg" || file.type=="video/avi" || file.type=="video/mpeg" || file.type=="video/mp4" || file.type=="video/quicktime" || file.type=="video/webm"){
+        if(file.size<10000000 && file.type.substr(0,5)=="image" || file.type.substr(0,5)=="video"){
             $("#post_comment input[type = 'file']").val("")
             $("#post_comment input[name = 'filename']").val(file.filename)
             $("#post_comment input[name = 'filedata']").val(file.data)
@@ -1108,7 +1121,20 @@ function submitComment(){
             if(media.type==undefined){
                 newComment.bindPopup(content + "<br>-" + name)
             }else if(media.type.substr(0,5)=="video"){
-                newComment.bindPopup(content + "<br><video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video><br>-" + name)
+                if(media.type=="video/x-msvideo"){
+                    var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
+                }else if(media.type=="video/mpeg"){
+                    var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
+                }else if(media.type=="video/mp4"){
+                    var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
+                }else if(media.type=="video/quicktime"){
+                    var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
+                }else if(media.type=="video/webm"){
+                    var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
+                }else {
+                    var video = "<a href='"+media.data+"'>Download video</a>";
+                };
+                newComment.bindPopup(content + "<br>"+video+"<br>-" + name)
             }else if(media.type.substr(0,5)=="image"){
                 newComment.bindPopup(content + "<br><img class='constrained' src='"+media.data+"' style='cursor:pointer;max-width:100%;max-height:100%;' onclick='enlarge(this)'/><br>-" + name)
             }else{
