--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -1070,10 +1070,10 @@ function submitSuggestion(){
                 var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
             }else if(media.type=="video/webm"){
                 var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
-            }else if(media.type=="video/quicktime" && window.navigator.userAgent.indexOf("Chrome")==-1){
-                var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
-            }else {
+            }else if(window.navigator.userAgent.indexOf("Mobile")>-1) {
                 var video = "<a href='"+media.data+"'>Download video.</a>";
+            }else{
+                var video = "<b>Videos are disabled on mobile platforms. Please revisit this suggested project on a desktop computer to view the attached media.</b>";
             };
             newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br>"+video+"<br>Submitted by "+name)
         }else if(media.type.substr(0,5)=="image"){
@@ -1121,8 +1121,10 @@ function submitComment(){
                     var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
                 }else if(media.type=="video/webm"){
                     var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
-                }else {
+                }else if(window.navigator.userAgent.indexOf("Mobile")>-1) {
                     var video = "<a href='"+media.data+"'>Download video.</a>";
+                }else{
+                    var video = "<b>Videos are disabled on mobile platforms. Please revisit this comment on a desktop computer to view the attached media.</b>";
                 };
                 newComment.bindPopup(content + "<br>"+video+"<br>-" + name)
             }else if(media.type.substr(0,5)=="image"){
