--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -671,7 +671,7 @@ function drawProject(microProjectData, r){
     }
     $('#projectPage').append("<hr>")
     $('#projectPage').append("<b>Comment</b>")
-    $('#projectPage').append("<form onchange='validate(this)' accept-charset='UTF-8' action='/queries/post_comment' data-remote='true' id='post_comment' method='post'><div style='margin:0;padding:0;display:inline'><input name='utf8' type='hidden' value='✓'><input name='verboselat' type='hidden'><input name='verboselng' type='hidden'><input name='geocode' type='hidden'><input name='filename' type='hidden'><input name='filedata' type='hidden'></div><input class='post_comment' name='name' required='true' placeholder='*Name' type='text' style='float:left;width:50%'><input class='post_comment' name='email' required='true' placeholder='*Email' type='text' style='float:left;width:50%'><input class='post_comment' name='latlng' onchange='mapLatLon()' placeholder='Lat, Long' type='text' style='float:left;width:66%;'><button type='button' onclick='getLatLon()' style='float:left;width:33%;padding:0px !important;line-height:1 !important;min-height:30px;position:relative;top:2px;'>Get from map</button><textarea rows=3 class='post_comment' name='content' required='true' placeholder='*Type your comment here...' style='float:left;width:100%;'></textarea><div style='height:36px;float:left;width:30%;line-height:36px;'><span style='font-weight:bold;vertical-align:middle;display:inline-block;line-height:1;'>Attach media:</span></div><input class='post_comment' name='media' id='commentmediaupload' type='file' accept='image/*,video/*' style='float:left;width:70%;'><input class='post_comment' style='float:left;width:6%;' type='checkbox' required='true' id='terms_and_conditions'><label style='float:left;width:60%;'>I accept the <a href='http://aiddata.org/disclaimer-and-license' target='_blank'>terms and conditions</a>.</label><button type='button' id='submit' disabled='disabled' style='float:right;width:33%;height:30px;' onclick='submitComment()'>Submit</button></form>")
+    $('#projectPage').append("<form onchange='validate(this)' accept-charset='UTF-8' action='/comments' data-remote='true' id='post_comment' method='post'><div style='margin:0;padding:0;display:inline'><input name='utf8' type='hidden' value='✓'><input name='definitely_came_from_web_form' type='hidden' value='true'><input name='[comment]verboselat' type='hidden'><input name='[comment]verboselng' type='hidden'><input name='[comment]geocode_id' type='hidden'><input name='[comment]filename' type='hidden'><input name='[comment]filedata' type='hidden'><input name='[comment]project_id' type='hidden' value='"+project.id+"'></div><input class='post_comment' name='[comment]name' required='true' placeholder='*Name' type='text' style='float:left;width:50%'><input class='post_comment' name='[comment]email' required='true' placeholder='*Email' type='text' style='float:left;width:50%'><input class='post_comment' name='[comment]latlng' onchange='mapLatLon()' placeholder='Lat, Long' type='text' style='float:left;width:66%;'><button type='button' onclick='getLatLon()' style='float:left;width:33%;padding:0px !important;line-height:1 !important;min-height:30px;position:relative;top:2px;'>Get from map</button><textarea rows=3 class='post_comment' name='comment[content]' required='true' placeholder='*Type your comment here...' style='float:left;width:100%;'></textarea><div style='height:36px;float:left;width:30%;line-height:36px;'><span style='font-weight:bold;vertical-align:middle;display:inline-block;line-height:1;'>Attach media:</span></div><input class='post_comment' name='[comment]media' id='commentmediaupload' type='file' accept='image/*,video/*' style='float:left;width:70%;'><input class='post_comment' style='float:left;width:6%;' type='checkbox' required='true' id='terms_and_conditions'><label style='float:left;width:60%;'>I accept the <a href='http://aiddata.org/disclaimer-and-license' target='_blank'>terms and conditions</a>.</label><button type='button' id='submit' disabled='disabled' style='float:right;width:33%;height:30px;' onclick='submitComment()'>Submit</button></form>")
 //Event Listener for file change
     commentFiles = [];
     $("#post_comment input[type=file]").change(function(event) {
@@ -714,14 +714,14 @@ function validate(e){
 };
 newComment = L.geoJson();
 function mapLatLon(){
-    var latlng = $("form#post_comment input[name = 'latlng']").val().split(',');
+    var latlng = $("form#post_comment input[name = '[comment]latlng']").val().split(',');
     if(latlng.length==2){
         var lat=parseFloat(latlng[0]),
                 lng = parseFloat(latlng[1]);
         if(typeof(lat)=="number" && typeof(lng)=="number" && lat>=-90 && lat<=90 && lng>=-180 && lng<=180) {
-            $("input[name = 'verboselat']").val(lat)
-            $("input[name = 'verboselng']").val(lng)
-            $("input[name = 'geocode']").val(undefined)
+            $("input[name = '[comment]verboselat']").val(lat)
+            $("input[name = '[comment]verboselng']").val(lng)
+            $("input[name = '[comment]geocode_id']").val(undefined)
             if (map.hasLayer(newComment)) {
                 map.removeLayer(newComment)
             }
@@ -755,10 +755,10 @@ function getLatLonEventsOff(){
 singleEventFunc = function(e){
     var lat = e.latlng.lat,
             lng = e.latlng.lng;
-    $("input[name = 'verboselat']").val(lat)
-    $("input[name = 'verboselng']").val(lng)
-    $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-    $("input[name = 'geocode']").removeAttr("value")
+    $("input[name = '[comment]verboselat']").val(lat)
+    $("input[name = '[comment]verboselng']").val(lng)
+    $("input[name = '[comment]latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
+    $("input[name = '[comment]geocode_id']").removeAttr("value")
     if(map.hasLayer(newComment)){
         map.removeLayer(newComment)
     }
@@ -769,10 +769,10 @@ singleEventFunc = function(e){
 singleGeocodeEventFunc = function(e){
     var lat = e.layer._latlng.lat,
             lng = e.layer._latlng.lng;
-    $("input[name = 'verboselat']").val(lat)
-    $("input[name = 'verboselng']").val(lng)
-    $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-    $("input[name = 'geocode']").val(e.layer.properties.geo_code_id)
+    $("input[name = '[comment]verboselat']").val(lat)
+    $("input[name = '[comment]verboselng']").val(lng)
+    $("input[name = '[comment]latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
+    $("input[name = '[comment]geocode_id']").val(e.layer.properties.geo_code_id)
     if(map.hasLayer(newComment)){
         map.removeLayer(newComment)
     }
@@ -785,10 +785,10 @@ clusterEventFunc = function(e){
     clusterEvent.latlng = map.mouseEventToLatLng(e.originalEvent)
     var lat = clusterEvent.latlng.lat,
             lng = clusterEvent.latlng.lng;
-    $("input[name = 'verboselat']").val(lat)
-    $("input[name = 'verboselng']").val(lng)
-    $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-    $("input[name = 'geocode']").removeAttr("value")
+    $("input[name = '[comment]verboselat']").val(lat)
+    $("input[name = '[comment]verboselng']").val(lng)
+    $("input[name = '[comment]latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
+    $("input[name = '[comment]geocode_id']").removeAttr("value")
     if(map.hasLayer(newComment)){
         map.removeLayer(newComment)
     }
@@ -991,10 +991,10 @@ function openRightClickMarkers(e){
                 function(){
                     var lat = e.layer._latlng.lat,
                             lng = e.layer._latlng.lng;
-                    $("form#post_comment input[name = 'verboselat']").val(lat)
-                    $("form#post_comment input[name = 'verboselng']").val(lng)
-                    $("form#post_comment input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-                    $("form#post_comment input[name = 'geocode']").val(e.layer.properties.geo_code_id)
+                    $("form#post_comment input[name = '[comment]verboselat']").val(lat)
+                    $("form#post_comment input[name = '[comment]verboselng']").val(lng)
+                    $("form#post_comment input[name = '[comment]latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
+                    $("form#post_comment input[name = '[comment]geocode_id']").val(e.layer.properties.geo_code_id)
                     if(map.hasLayer(newComment)){
                         map.removeLayer(newComment)
                     }
@@ -1010,10 +1010,10 @@ function openRightClickMarkers(e){
         map.removeLayer(dropdown);
         var lat = e.layer._latlng.lat,
                 lng = e.layer._latlng.lng;
-        $("form#post_comment input[name = 'verboselat']").val(lat)
-        $("form#post_comment input[name = 'verboselng']").val(lng)
-        $("form#post_comment input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
-        $("form#post_comment input[name = 'geocode']").val(e.layer.properties.geo_code_id)
+        $("form#post_comment input[name = '[comment]verboselat']").val(lat)
+        $("form#post_comment input[name = '[comment]verboselng']").val(lng)
+        $("form#post_comment input[name = '[comment]latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
+        $("form#post_comment input[name = '[comment]geocode_id']").val(e.layer.properties.geo_code_id)
         if(map.hasLayer(newComment)){
             map.removeLayer(newComment)
         }
@@ -1063,7 +1063,7 @@ function submitSuggestion(){
         if(source.indexOf("http")==0){source = "<a href='"+source+"' target='_blank'>Link</a>"}
         if(source.indexOf("www")==0){source = "<a href='http://"+source+"' target='_blank'>Link</a>"}
         newSuggestion.closePopup()
-        if(media.type==undefined){
+        if(media==undefined){
             newSuggestion.bindPopup("<b>"+title+"</b><br>Source: "+source+"<br>Submitted by "+name)
         }else if(media.type.substr(0,5)=="video"){
             if(media.type=="video/mp4"){
@@ -1099,8 +1099,8 @@ function submitComment(){
     $.each(commentFiles, function(index, file) {
         if(file.size<10000000 && file.type.substr(0,5)=="image" || file.type.substr(0,5)=="video"){
             $("#post_comment input[type = 'file']").val("")
-            $("#post_comment input[name = 'filename']").val(file.filename)
-            $("#post_comment input[name = 'filedata']").val(file.data)
+            $("#post_comment input[name = '[comment]filename']").val(file.filename)
+            $("#post_comment input[name = '[comment]filedata']").val(file.data)
         }else{
             window.alert("Please limit your upload to 10MB and one of the following file types:\n\nImages: .png, .gif, .jpeg, or .jpg\n\nVideos: .avi, .mpeg, .mp4, quicktime, or .webm");
             uploadSuccess = false;
@@ -1108,13 +1108,13 @@ function submitComment(){
     });
     if(uploadSuccess){
         $("form#post_comment").trigger("submit")
-        var content=$("form#post_comment textarea[name ='content']").val(),
-                name = $("form#post_comment input[name ='name']").val(),
-                latlng = $("form#post_comment input[name ='latlng']").val().split(','),
+        var content=$("form#post_comment textarea[name ='comment[content]']").val(),
+                name = $("form#post_comment input[name ='[comment]name']").val(),
+                latlng = $("form#post_comment input[name ='[comment]latlng']").val().split(','),
                 media = commentFiles[0];
         if(map.hasLayer(newComment)) {
             newComment.closePopup()
-            if(media.type==undefined){
+            if(media==undefined){
                 newComment.bindPopup(content + "<br>-" + name)
             }else if(media.type.substr(0,5)=="video"){
                 if(media.type=="video/mp4"){
