--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -181,6 +181,7 @@ function setParams(params){
       </div>
       <%= javascript_tag "var results=#{@page.to_json}"%>
       <%= javascript_tag "var feature_collection=#{@page["features"].to_json}"%>
+      <%= javascript_tag "var commentsData=#{@comments.to_json}"%>
       <script>
 //Function to draw results in the panel
         drawResults = function(results){
@@ -893,6 +894,33 @@ function highlightProjectDiv(e){
 drawClusters();
 //Map Event listeners
 comments = L.markerClusterGroup({showCoverageOnHover:false});
+for(var i = 0;i<commentsData.length;i++){
+    var content=commentsData[i].content,
+            name = commentsData[i].name,
+            project_id = commentsData[i].project_id,
+            latlng = commentsData[i].geom.substr(27,commentsData[i].geom.length-29).split(" ").reverse();
+            media = commentsData[i].media;
+    var marker = new L.marker(latlng);
+    if(media==undefined){
+        marker.bindPopup("<b>Comment on Project ID: <a href='/projects/"+project_id+"' target='_blank'>"+project_id+"</a></b><br>"+content + "<br>-" + name)
+    }else if(media.media_content_type.substr(0,5)=="video"){
+        if(media.media_content_type=="video/mp4"){
+            var video = "<video width='280' height='210' controls><source type='"+media.media_content_type+"' src='"+media.media_url+"'></video>";
+        }else if(media.media_content_type=="video/webm"){
+            var video = "<video width='280' height='210' controls><source type='"+media.media_content_type+"' src='"+media.media_url+"'></video>";
+        }else if(window.navigator.userAgent.indexOf("Mobile")==-1) {
+            var video = "<a href='"+media.media_url+"'>Download video.</a>";
+        }else{
+            var video = "<b>Videos are disabled on mobile platforms. Please revisit this comment on a desktop computer to view the attached media.</b>";
+        };
+        marker.bindPopup("<b>Comment on Project ID: <a href='/projects/"+project_id+"' target='_blank'>"+project_id+"</a></b><br>"+content + "<br>"+video+"<br>-" + name)
+    }else if(media.media_content_type.substr(0,5)=="image"){
+        marker.bindPopup("<b>Comment on Project ID: <a href='/projects/"+project_id+"' target='_blank'>"+project_id+"</a></b><br>"+content + "<br><img class='constrained' src='"+media.media_url+"' style='cursor:pointer;max-width:100%;max-height:100%;' onclick='enlarge(this)'/><br>-" + name)
+    }else{
+        marker.bindPopup("<b>Comment on Project ID: <a href='/projects/"+project_id+"' target='_blank'>"+project_id+"</a></b><br>"+content + "<br>-" + name)
+    }
+    comments.addLayer(marker)
+};
 suggestions = L.markerClusterGroup({maxClusterRadius:40,spiderfyDistanceMultiplier:2, showCoverageOnHover:false, iconCreateFunction:function(cluster){
     var count = cluster.getChildCount()
     return new L.DivIcon({html:'<div><b>' + count + '</b></div>',className:"suggestion-cluster",iconSize: L.point(Math.sqrt((count+8)*20),Math.sqrt((count+8)*20))})
@@ -1119,12 +1147,13 @@ function submitComment(){
         $("form#post_comment").trigger("submit")
         var content=$("form#post_comment textarea[name ='comment[content]']").val(),
                 name = $("form#post_comment input[name ='[comment]name']").val(),
+                project_id = $("form#post_comment input[name ='[comment]project_id']").val(),
                 latlng = $("form#post_comment input[name ='latlng']").val().split(','),
                 media = commentFiles[0];
         if(map.hasLayer(newComment)) {
             newComment.closePopup()
             if(media==undefined){
-                newComment.bindPopup(content + "<br>-" + name)
+                newComment.bindPopup("<b>Comment on Project ID: <a href='/projects/"+project_id+"' target='_blank'>"+project_id+"</a></b><br>"+content + "<br>-" + name)
             }else if(media.type.substr(0,5)=="video"){
                 if(media.type=="video/mp4"){
                     var video = "<video width='280' height='210' controls><source type='"+media.type+"' src='"+media.data+"'></video>";
@@ -1135,11 +1164,11 @@ function submitComment(){
                 }else{
                     var video = "<b>Videos are disabled on mobile platforms. Please revisit this comment on a desktop computer to view the attached media.</b>";
                 };
-                newComment.bindPopup(content + "<br>"+video+"<br>-" + name)
+                newComment.bindPopup("<b>Comment on Project ID: <a href='/projects/"+project_id+"' target='_blank'>"+project_id+"</a></b><br>"+content + "<br>"+video+"<br>-" + name)
             }else if(media.type.substr(0,5)=="image"){
-                newComment.bindPopup(content + "<br><img class='constrained' src='"+media.data+"' style='cursor:pointer;max-width:100%;max-height:100%;' onclick='enlarge(this)'/><br>-" + name)
+                newComment.bindPopup("<b>Comment on Project ID: <a href='/projects/"+project_id+"' target='_blank'>"+project_id+"</a></b><br>"+content + "<br><img class='constrained' src='"+media.data+"' style='cursor:pointer;max-width:100%;max-height:100%;' onclick='enlarge(this)'/><br>-" + name)
             }else{
-                newComment.bindPopup(content + "<br>-" + name)
+                newComment.bindPopup("<b>Comment on Project ID: <a href='/projects/"+project_id+"' target='_blank'>"+project_id+"</a></b><br>"+content + "<br>-" + name)
             }
             comments.addLayer(newComment)
             if (map.hasLayer(newComment)) {
