--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -1074,8 +1074,7 @@ function cancelSuggestion(){
 function submitSuggestion(){
     var uploadSuccess = true;
     $.each(suggestionFiles, function(index, file) {
-        if(file.size<2000000 && file.type.substr(0,5)=="image" || file.type.substr(0,5)=="video"){
-            $("#post_suggestion input[type = 'file']").val("")
+        if(file.size<2000000 && (file.type.substr(0,5)=="image" || file.type.substr(0,5)=="video")){            $("#post_suggestion input[type = 'file']").val("")
             $("#post_suggestion input[name = 'filename']").val(file.filename)
             $("#post_suggestion input[name = 'filedata']").val(file.data)
         }else{
@@ -1126,7 +1125,8 @@ function enlarge(image){
 function submitComment(){
     var uploadSuccess = true;
     $.each(commentFiles, function(index, file) {
-        if(file.size<2000000 && file.type.substr(0,5)=="image" || file.type.substr(0,5)=="video"){
+        console.log(file.size)
+        if(file.size<2000000 && (file.type.substr(0,5)=="image" || file.type.substr(0,5)=="video")){
             $("#post_comment input[type = 'file']").val("")
             $("#post_comment input[name = '[base64_media_item]content_type']").val(file.type)
             $("#post_comment input[name = '[base64_media_item]original_filename']").val(file.filename)
