Success and failure

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -692,7 +692,9 @@ function drawProject(microProjectData, r){
 //Event listener for ajax success
     $('form#post_comment')
             .bind("ajax:beforeSend", toggleLoading)
-            .bind("ajax:complete", function(){toggleLoading();window.alert("Thank you for submitting a comment.\n\nIf you opted to geo-tag your comment, it will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.");})
+            .bind("ajax:complete", toggleLoading)
+            .bind("ajax:success", function(){window.alert("Thank you for submitting a comment.\n\nIf you opted to geo-tag your comment, it will appear on your map during your current session, but will not be visible to other users until it is approved by an AidData staff member.")})
+            .bind("ajax:failure", function(){window.alert("Sorry, something went wrong. Please try again later.")})
 //Slide Results Panel
     slideResults()
     r.resolve();
